Added the ability to describe items

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -181,6 +181,10 @@ tbody.all_the_mods tr {
 }
 
 
+.item-description {
+  background: lightgray;
+}
+
 .headline-light {
 	font-family: "Poiret One", Geneva, sans-serif;
 	color: $smokewhite;
