--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -43,10 +43,15 @@
 		<% category.items.each do |item| %>
 			<tbody>
 				<tr class="item-name">
-					<td ><%= item.name %></td>
+					<td ><%= link_to item.name, {:action => "edit_item", :controller => "menu", :item_id => item.id} %></td>
 					<td class="text-right"><%= Item.integer_to_currency item.price %></td>
 					<td class="text-right" style="width:5%"><%= link_to content_tag(:span, nil, :class=> "glyphicon glyphicon-minus"), { :controller => 'menu', :action => 'delete_item', :item_id => item.id } %></td>
 				</tr>
+				<% if item.has_description? %>
+					<tr>
+						<td colspan="3" class="item-description"><%= item.description %></td>
+					</tr>
+				<% end %>
 			</tbody>
 
 			<% if item.modifiers.size > 0 %>
@@ -104,6 +109,11 @@
 	<tr>
 		<td> <%= f.label :price %></td>
 		<td> <%= f.text_field :price , :class=>"form-control"%></td>
+	</tr>
+
+	<tr> 
+		<td> <%= f.label :description %> </td>
+		<td> <%= f.text_area :description, :class => "form-control" %> </td>
 	</tr>
 
 	<tr>
