--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -39,12 +39,19 @@
                   <td> <span class="glyphicon glyphicon-minus minus"></span> </td>
                   <td class="item_id hidden"> <%= item.id %> </td>
                   <%= f.hidden_field "item[#{item.id}]", :value => 0, :class => "item_#{item.id}" %>
-
+             
+                  <% if item.has_description? %>
+                    </tr>
+                    <tr>
+                      <td colspan="5" class="item-description"> <%= item.description %> </td>
+                  <% end %>
                   <% if item.has_mod?; @item = item %>
                     <%= render :partial => 'display_mods', :locals => { item: @item } %>
                   <% end %>
                 <% end %>
               </tr>
+
+
             </tbody>
           <%end%>
         </table>
