--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,13 +32,40 @@
 
 
 		<div class="container">
+
+					<div class="topbar center-new">
+						<div class="to_the_left">
+							<h1 class="new pad-left pad-right-lrg fll">Shnack</h1>
+							<div class="prgs-bar fll">1   2   3</div>
+							<span class="order-total pad-left-lrg pad-right fll"><h3>$18.26</h3></span>
+						</div>
+						<div class="to_the_right">
+							<% if user_signed_in? %>
+								<ul id="account-manage" class="nav nav-pills nav-stacked hidden-xs">
+									<li>
+									  <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>   
+									<li>   
+									  <%= link_to "Change your password", edit_user_registration_path %>
+
+									  <% if current_user.is_manager?  %>
+									  <li>
+									  	<%= link_to "Manage Your Vendors", :controller => "/shnack", :action => "manage_vendors" %>
+									  	</li>
+									  <% end %>
+								  </ul>
+							  <% else %>
+								<%= link_to('Login', new_user_session_path, :class => 'btn btnp')  %> 
+								<%= link_to('Sign Up', new_user_session_path, :class => 'btn btnp')  %>   
+							  <% end %>
+						</div>
+					</div>
+
 			<% if flash[:notice] %>
 				<div class="notice"><%= flash[:notice] %></div>
 			<% end %>
 			<% if flash[:error] %>
 				<div class="flash-error"> <%= flash[:error] %> </div>
 			<% end %>
-
 
 			<div class="row add_margin">
 
