user creation via ios

--- a/app/views/stripe_info.html.erb
+++ b/app/views/stripe_info.html.erb
@@ -1,6 +1,8 @@
-<h1>Stripe Info <h1>
+<h1>User Info <h1>
 
-<h3>Token: <%= token %> </h3>
-<h3>Ammount: <%= ammount %> </h3>
+<h3>email: <%= @user.email %> </h3>
+<h3>phone: <%= @user.number %> </h3>
+<h3>Password: <%= @user.password %> </h3>
+
 
 
