--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -499,29 +499,28 @@ table.item-list {
   left: 0;
   right: 0;
   max-width: 880px;
-  height: 50px;
+  //height: 50px;
   //margin-top: 10px;
   margin: 8px auto 30px auto;
+  padding: 0px 30px;
   color: $red;
-  background: KHAKI;
+  background: #EEE;
   display: block;
   @include box-shadow(0, 0, 6px, $black);
 }
 
 
 .prgs-bar {
-  display: inline;
+  @extend .gen_inline;
 }
 
 .order-total {
   font-weight: 900;
-  display: inline;
+  @extend .gen_inline;
 }
 
 
 .my-gear {
   float: right;
-  display:inline;
-    vertical-align: middle;
-
+  @extend .gen_inline;
 }
