--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,113 +30,76 @@
 
 <body onload="checkDevice();">
 
-
-		<div class="container">
-
-					<div class="topbar">
-						<div class="to_the_left">
-							<h1 class="new pad-left pad-right-lrg" style="display:inline;">Shnack</h1>
-							<div class="prgs-bar">1   2   3</div>
-							<div class="order-total pad-left-lrg pad-right">$18.26</div>
-						</div>
-						<div class="to_the_right">
-							<% if user_signed_in? %>
-								<%= image_tag("gear.png", alt: "settings", class: "my-gear") %>
-								<!-- <ul id="account-manage" class="nav nav-pills nav-stacked hidden-xs">
-									<li>
-									  <%#= link_to('Logout', destroy_user_session_path, :method => :delete) %>   
-									<li>   
-									  <%#= link_to "Change your password", edit_user_registration_path %>
-
-									  <%# if current_user.is_manager?  %>
-									  <li>
-									  	<%#= link_to "Manage Your Vendors", :controller => "/shnack", :action => "manage_vendors" %>
-									  	</li>
-									  <%# end %>
-								  </ul> -->
-							  <% else %>
-								<%= link_to('Login', new_user_session_path, :class => 'btn btnp')  %> 
-								<%= link_to('Sign Up', new_user_session_path, :class => 'btn btnp')  %>   
-							  <% end %>
-						</div>
-					</div>
-
-			<% if flash[:notice] %>
-				<div class="notice"><%= flash[:notice] %></div>
-			<% end %>
-			<% if flash[:error] %>
-				<div class="flash-error"> <%= flash[:error] %> </div>
-			<% end %>
-
-			<div class="row add_margin">
-
-				<div id="nav" class="col-md-3 col-md-push-4 col-md-offset-3"> 
-				  <a href="top"><%= link_to(image_tag("shnack_beta3.png", :class => "logo img-responsive"), root_path)   %></a>
-				  <ul id="account-manage" class="nav nav-pills nav-stacked hidden-xs">
-				  <% if user_signed_in? %>
+	<div class="container">
+		<div class="topbar clear-fix">
+			<h1 class="new gen_inline pad-right-lrg">Shnack</h1>
+			<div class="prgs-bar">1   2   3</div>
+			<div class="order-total pad-left-lrg pad-right">$00.00</div>
+			<% if user_signed_in? %>
+				<%= image_tag("gear.png", alt: "settings", class: "my-gear") %>
+				<!-- <ul id="account-manage" class="nav nav-pills nav-stacked hidden-xs">
 					<li>
-					  <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>   
-					<li>   
-					  <%= link_to "Change your password", edit_user_registration_path %>
-
-					  <% if current_user.is_manager?  %>
-					  	<%= link_to "Manage Your Vendors", :controller => "/shnack", :action => "manage_vendors" %>
-					  <% end %>
-					</li>
-				  <% else %>
+					  <%#= link_to('Logout', destroy_user_session_path, :method => :delete) %>   
+					</li>  
 					<li>
-					<%= link_to('Login', new_user_session_path, :class => 'btn btnp')  %>  
+						<%#= link_to "Change your password", edit_user_registration_path %>
 					</li>
-				  <% end %>
-				  </ul>
-
-				 
-
-				</div>
-
-
-				<div class="col-md-4 col-md-pull-3">
-					
-
-					<div id="order-form" class="row">
-						<%= yield %>
-					</div>
-				</div>
-
-			</div>
+					<%# if current_user.is_manager?  %>
+					  <li>
+					  	<%#= link_to "Manage Your Vendors", :controller => "/shnack", :action => "manage_vendors" %>
+					 	</li>
+					<%# end %>
+				</ul> -->
+			<% else %>
+				<%= link_to('Login', new_user_session_path, :class => 'btn btnp')  %> 
+				<%= link_to('Sign Up', new_user_session_path, :class => 'btn btnp')  %>   
+			<% end %>
 		</div>
 
-		<div class="level">
-			<div class="container my-container caje-info">
-				<span class="shnack">Shnack</span> is now being used at <soan class="caje">Caje</soan><br />
-				<strong>Order ahead. Skip the line.</strong>
-				<br/>
-					<span style="color:#333; font-weight:900;"> Every order enters you for the chance to win a new Logitech Speaker System! </span>
-			</div>
-		</div>
+		<% if flash[:notice] %>
+			<div class="notice"><%= flash[:notice] %></div>
+		<% end %>
+		<% if flash[:error] %>
+			<div class="flash-error"> <%= flash[:error] %> </div>
+		<% end %>
+			
 
-		<div id="level-2">
-			<div class="row">
-				<div class="col-4 step-style">
-					<h1 class="step-style">Order</h1>
-					<%= image_tag("step1.png", :class => "step-style")   %>
-					<p class="step-style">From your seat, view the menus of vendors. Pay and place your order.</p>
-				</div>
+		<div id="order-form" class="row">
+			<%= yield %>
+		</div>
+				
+	</div>
+
+	<div class="level">
+		<div class="container my-container caje-info">
+			<span class="shnack">Shnack</span> is now being used at <soan class="caje">Caje</soan><br />
+			<strong>Order ahead. Skip the line.</strong>
+			<br/>
+				<span style="color:#333; font-weight:900;"> Every order enters you for the chance to win a new Logitech Speaker System! </span>
+		</div>
+	</div>
+
+	<div id="level-2">
+		<div class="row">
+			<div class="col-4 step-style">
+				<h1 class="step-style">Order</h1>
+				<%= image_tag("step1.png", :class => "step-style")   %>
+				<p class="step-style">From your seat, view the menus of vendors. Pay and place your order.</p>
+			</div>
 	
+			<div class="col-4 step-style">
+				<h1 class="step-style">Relax</h1>
+				<%= image_tag("camera.png", :class => "step-style")   %>
+				<p class="step-style">Sit back, relax, and enjoy the experience.</p>
+			</div>
 
-				<div class="col-4 step-style">
-					<h1 class="step-style">Relax</h1>
-					<%= image_tag("camera.png", :class => "step-style")   %>
-					<p class="step-style">Sit back, relax, and enjoy the experience.</p>
-				</div>
-
-				<div class="col-4 step-style">
-					<h1 class="step-style">PickUp</h1>
-					<%= image_tag("step3.png", :class => "step-style")   %>
-					<p class="step-style">When your order is ready, a notification will be sent. Pick up and enjoy.</p>
-				</div>
+			<div class="col-4 step-style">
+				<h1 class="step-style">PickUp</h1>
+				<%= image_tag("step3.png", :class => "step-style")   %>
+				<p class="step-style">When your order is ready, a notification will be sent. Pick up and enjoy.</p>
 			</div>
 		</div>
+	</div>
 
 		<div id="level-3">
 			<div class="container my-container">
