--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -64,7 +64,23 @@
 		<% end %>
 			
 
-		<div id="order-form" class="row">
+		<div id="order-form" class="the-menu">
+
+	    <div class="row-new">
+	      <div class="panel-heading"><h3>FOODOOD</h3></div>
+	    </div>
+
+	    <div class="row-new">
+	      <div class="item-name col-3">Cheese Pizza</div>
+	      <div class="item-price col-2">$00.00</div>
+	      <div class="cart-add col-1">+</div>
+	      <div class="cart-total col-1">0</div>
+	      <div class="cart-minus col-1">-</div>
+	    	<div class="item-desc col-4">This is a simple discription of a CP, do you know what this is.</div>
+	    </div>
+ 		</div>
+
+
 			<%= yield %>
 		</div>
 				
