added email validations

--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -49,8 +49,9 @@
     <% end %>
   <% end %>
   <div class="error stripe-error" style="display:none;"> </div>
-  <div class="error name-error" style="display:none;">Please enter your name or we won't be able to let you know when your order's ready!</div>
+  <div class="error name-error" style="display:none;">Please enter your name</div>
   <div class="error phone-error" style="display:none;">Please enter your phone number or we won't be able to let you know when your order's ready!</div>
+  <div class="error email-error" style="display:none;"> Please enter your e-mail address or we won't be able to send you your receipt!</div>
 
 <script type="text/javascript" src="https://js.stripe.com/v2/"> </script>
 
