fixed radio buttons

--- a/app/views/orders/_display_mods.html.erb
+++ b/app/views/orders/_display_mods.html.erb
@@ -16,14 +16,10 @@
               <%#= radio_button_tag("#{mod.name.downcase}", "#{val.name.downcase}") %>
               <% unless ind == 0 %>
                 <input id="<%= mod.name.downcase %>_<%= val.name.downcase %>" name='<%= "#{item.id}_#{mod.id}" %>' class="<%="#{item.id}_modifier"%> modifier radio-mod-1" type="radio" value="<%= val.id %>" data-add-price="<%= val.price %>">
-                                <label class="checkbox">
-
-              </label>
+                <label for="<%= mod.name.downcase %>_<%= val.name.downcase %>"></label>
               <% else %>
               <input id="<%= mod.name.downcase %>_<%= val.name.downcase %>" name='<%= "#{item.id}_#{mod.id}" %>' class="<%="#{item.id}_modifier"%> modifier radio-mod-1" type="radio" value="<%= val.id %>" data-add-price="<%= val.price %>" checked>
-                            <label class="checkbox">
-
-                            </label>
+              <label for="<%= mod.name.downcase %>_<%= val.name.downcase %>"></label>
 
               <% end %>
             </td>
