--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -54,38 +54,28 @@ p {
 }
 
 input[type="radio"] {
-  
   opacity: 0;
-  margin: 12px 5px;
-  width:20px;
   position:absolute;
-
 }
 
 input[type="radio"] + label {
-  
-  display:inline-block;
-    background-color: $shnackred;
-    border-radius:50px;
-    padding:10px;
-  
+  background-color: khaki;
+  background-image: none;
+  border-radius:15px;
+  border: 2px solid #333;
+  display:block;
+  height: 10px;
+  padding:6px;
+  width:10px;
+    box-shadow: 0 0 2px #222;
+
 }
 
 input[type=radio]:checked + label { 
-   background-image: none;
-    background-color:white;
-    border: 3px solid;
-    border-color: $shnackred;
+  background-color:#333;
+  border-color: khaki;
 }
 
-input[type=radio]:checked + label::after {
- 
- background-image: none;
-    background-color:white;
-    position:absolute;
-    top: 3px;
-    left: 3px; 
-}
 
 
 .level {
