checkboxes are sqaures

--- a/app/views/orders/_display_mods.html.erb
+++ b/app/views/orders/_display_mods.html.erb
@@ -31,8 +31,10 @@
               <%#= radio_button_tag("#{mod.name.downcase}", "#{val.name.downcase}") %>
               <% unless ind == 0 %>
               <input id="<%= mod.name.downcase %>_<%= val.name.downcase %>" name="<%= "#{item.id}_#{mod.id}" %>" class="<%="#{item.id}_modifier"%> modifier radio-mod-1" type="radio" value="<%= val.id %>" data-add-price="<%= val.price %>">
+              <label for="<%= mod.name.downcase %>_<%= val.name.downcase %>"></label>
               <% else %>
               <input id="<%= mod.name.downcase %>_<%= val.name.downcase %>" name="<%= "#{item.id}_#{mod.id}" %>" class="<%="#{item.id}_modifier"%> modifier radio-mod-1" type="radio" value="<%= val.id %>" data-add-price="<%= val.price %>" checked>
+              <label for="<%= mod.name.downcase %>_<%= val.name.downcase %>"></label>
               <% end %>
             </td>
           <%end%>
@@ -42,6 +44,7 @@
             <td colspan="2">
               <%#= check_box("#{mod.name.downcase}", "#{val.name.downcase}") %>
               <input id="<%= mod.name.downcase %>_<%= val.name.downcase %>" name="<%= "#{item.id}_#{mod.id}" %>" class="<%="#{item.id}_modifier"%> modifier" type="checkbox" value="<%= val.id %>" data-add-price="<%= val.price %>">
+              <label for="<%= mod.name.downcase %>_<%= val.name.downcase %>"></label>
             </td>
           <%end%>
 
