--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -53,7 +53,7 @@ p {
 	background-image: linear-gradient(to bottom, #FCFCFC 0%, #EBEBEB 100%);
 }
 
-input[type="radio"] {
+input[type="radio"], input[type="checkbox"] {
   opacity: 0;
   position:absolute;
 }
@@ -71,7 +71,23 @@ input[type="radio"] + label {
 
 }
 
+input[type="checkbox"] + label {
+  background-color: khaki;
+  background-image: none;
+  border: 2px solid #555;
+  display:block;
+  height: 10px;
+  padding:6px;
+  width:10px;
+  box-shadow: 0 0 2px #333;
+}
+
 input[type=radio]:checked + label { 
+  background-color:#444;
+  border-color: khaki;
+}
+
+input[type="checkbox"]:checked + label { 
   background-color:#444;
   border-color: khaki;
 }
