--- a/app/views/orders/_display_mods.html.erb
+++ b/app/views/orders/_display_mods.html.erb
@@ -15,11 +15,13 @@
             <td colspan="2">
               <%#= radio_button_tag("#{mod.name.downcase}", "#{val.name.downcase}") %>
               <% unless ind == 0 %>
+                <label class="checkbox">
                 <input id="<%= mod.name.downcase %>_<%= val.name.downcase %>" name='<%= "#{item.id}_#{mod.id}" %>' class="<%="#{item.id}_modifier"%> modifier radio-mod-1" type="radio" value="<%= val.id %>" data-add-price="<%= val.price %>">
-                <label for="<%= mod.name.downcase %>_<%= val.name.downcase %>"></label>
+              </label>
               <% else %>
+              <label class="checkbox">
               <input id="<%= mod.name.downcase %>_<%= val.name.downcase %>" name='<%= "#{item.id}_#{mod.id}" %>' class="<%="#{item.id}_modifier"%> modifier radio-mod-1" type="radio" value="<%= val.id %>" data-add-price="<%= val.price %>" checked>
-              <label for="<%= mod.name.downcase %>_<%= val.name.downcase %>"></label>
+                            </label>
 
               <% end %>
             </td>
