--- a/app/assets/stylesheets/custom-resizing.css.scss
+++ b/app/assets/stylesheets/custom-resizing.css.scss
@@ -1,3 +1,16 @@
+
+@media (max-width: 520px) {
+  .item-name { width: 50%; }
+  .item-price { width: 25%; }
+  .item-desc { display: none; }
+  .prgs-bar { display: block; width: 100% !important;}
+  //.step { display: inline-block; width: 32%; }
+  .topbar { padding: 0 2px 4px 2px; }
+  .topbar .shnack { font-size: 2.5em; }
+  .topbar .my-gear img { width: 30px; height: 30px; }
+}
+
+
 @media (min-width: 992px) { 
 
 	.logo {
