--- a/app/assets/stylesheets/base/_utilities.scss
+++ b/app/assets/stylesheets/base/_utilities.scss
@@ -28,6 +28,7 @@ h1, h2, h3, h4, h5, h6 {
 h1.new {
   font-size: 3em;
   font-family: "Damion", serif;
+  color: #A10;
 }
 
 h2.new {
@@ -58,4 +59,8 @@ h3.new {
 .center {
   margin: 0 auto;
   position: relative;
+}
+
+a .shnack {
+  text-decoration: none;
 }
