--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
 
 	<div class="container">
 		<div id="topbar" class="topbar clear-fix">
-			<h1 class="new gen_inline shnack">Shnack</h1>
+			<a href="/"><h1 class="new gen_inline shnack">Shnack</h1></a>
 
 			<% if user_signed_in? %>
 				<ul id="click_me" class="my-gear">
@@ -48,23 +48,40 @@
 					</li>
 				</ul>
 			<%else%>
-				<%= link_to('Login', new_user_session_path, :class => 'btn btnp')  %> 
-				<%= link_to('Sign Up', new_user_session_path, :class => 'btn btnp')  %>   
+				<div class="flr">
+					<%= link_to('Login', new_user_session_path, :class => 'btn btnp')  %> 
+					<%= link_to('Sign Up', new_user_session_path, :class => 'btn btnp')  %>  
+				</div> 
 			<%end%>
 
 			<div class="prgs-bar center">
-				<div class="step">
-  				Venue
-    			<div class="circle completed"></div>
-  			</div>
-  			<div class="step">
-  				Menu
-      		<div class="circle completed"></div>
-  			</div>
- 				<div class="step current">
- 				  Pay
-      		<div class="circle current"></div>
-  			</div>
+				<% if current_page?(controller: 'application', action: 'select_stadium') %>
+	  			<div class="step current">
+	  		<% else %>
+	  			<div class="step">
+	  		<%end%>
+	  				Venue
+	      		<div class="circle"></div>
+	  			</div>
+
+
+  			<% if current_page?(controller: 'orders', action: 'new') %>
+	  			<div class="step current">
+	  		<% else %>
+	  			<div class="step">
+	  		<%end%>
+	  				Menu
+	      		<div class="circle"></div>
+	  			</div>
+				
+				<% if current_page?(controller: 'charges', action: 'new') %>
+	  			<div class="step current">
+	  		<% else %>
+	  			<div class="step">
+	  		<%end%>
+	  				Pay
+	      		<div class="circle"></div>
+	  		</div>
 			</div>
 
 
