--- a/app/assets/stylesheets/base/_utilities.scss
+++ b/app/assets/stylesheets/base/_utilities.scss
@@ -28,7 +28,6 @@ h1, h2, h3, h4, h5, h6 {
 h1.new {
   font-size: 3em;
   font-family: "Damion", serif;
-  color: #A10;
 }
 
 h2.new {
@@ -63,4 +62,5 @@ h3.new {
 
 a .shnack {
   text-decoration: none;
+  color: #EEE;
 }
