--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -22,78 +22,15 @@ $elements: base, phone, menu, topbar, user-settings;
 
 
 
-body {
-	//margin-right: 0px;
-	//padding-right: 0px;
-	background-size:100% 100%;
-}
 
 p {
 	font-family: "Poiret One", Geneva, sans-serif;
 }
 
-.logo {
-	width:85%;
-	margin: 0 auto;
+.website-wrapper {
+  width: 100%;
+  margin: 0;
 }
-
-.website-container {
-	padding-top:15px;
-	width: 100%;
-	background-image: -webkit-gradient(
-		linear,
-		left top,
-		left bottom,
-		color-stop(0, #FCFCFC),
-		color-stop(1, #EBEBEB)
-	);
-	background-image: -o-linear-gradient(bottom, #FCFCFC 0%, #EBEBEB 100%);
-	background-image: -moz-linear-gradient(bottom, #FCFCFC 0%, #EBEBEB 100%);
-	background-image: -webkit-linear-gradient(bottom, #FCFCFC 0%, #EBEBEB 100%);
-	background-image: -ms-linear-gradient(bottom, #FCFCFC 0%, #EBEBEB 100%);
-	background-image: linear-gradient(to bottom, #FCFCFC 0%, #EBEBEB 100%);
-}
-
-input[type="radio"], input[type="checkbox"] {
-  opacity: 0;
-  position:absolute;
-}
-
-input[type="radio"] + label {
-  background-color: khaki;
-  background-image: none;
-  border-radius:15px;
-  border: 2px solid #555;
-  display:block;
-  height: 10px;
-  padding:6px;
-  width:10px;
-  box-shadow: 0 0 2px #333;
-
-}
-
-input[type="checkbox"] + label {
-  background-color: khaki;
-  background-image: none;
-  border: 2px solid #555;
-  display:block;
-  height: 10px;
-  padding:6px;
-  width:10px;
-  box-shadow: 0 0 2px #333;
-}
-
-input[type=radio]:checked + label { 
-  background-color:#444;
-  border-color: khaki;
-}
-
-input[type="checkbox"]:checked + label { 
-  background-color:#444;
-  border-color: khaki;
-}
-
-
 
 .level {
 	width:60%;
@@ -108,8 +45,6 @@ input[type="checkbox"]:checked + label {
     width: 90%;
   }
 }
-
-
 
 #level-2 {
 	width: 100%;
@@ -128,6 +63,9 @@ input[type="checkbox"]:checked + label {
 	background-image: -ms-linear-gradient(bottom, #9E1919 0%, #A62424 100%);
 	background-image: linear-gradient(to bottom, #9E1919 0%, #A62424 100%);
 }
+
+
+
 
 
 #level-3 {
@@ -200,10 +138,9 @@ img.step-style {
 
 #phone{
 position: absolute;
-bottom: -45px;
+bottom: -120px;
 z-index: index($elements, phone);
-  width: 230px;
-
+width: 230px;
 }
 
 
@@ -224,19 +161,6 @@ z-index: index($elements, phone);
   display: block;
 }
 
-.center {
-	margin: 0px auto;
-	text-align: center;
-}
-
-.center-new {
-  margin: 0 auto;
-}
-
-.add_margin {
-	margin-bottom: 175px;
-}
-
 .shnack {
 	font-family: "Damion", serif;
 	font-size:1.5em;
@@ -251,31 +175,20 @@ ul.info-links {
  	list-style: none;
 	font-size: 3em;
 	font-family: "Damion", serif;
-  	li {
-    	//padding: 0px 40px 0px 0px;
-    	display:inline;
+  li {
+   	display: inline-block;
+  }
+  a {
+  	color: $red;
+  	text-decoration: none;
+  	&:hover {
+  		color: $white;
+  		border-bottom: 2px solid $red;
   	}
-  	a {
-  		color: $red;
-  		text-decoration: none;
-  		&:hover {
-  			color: $white;
-  			border-bottom: 2px solid $red;
-  		}
-  	}
+  }
 }
 
-#return-to-top{
-	text-align: center;
-	margin: 20px auto;
-	a {
-		color: $red;
-  		text-decoration: none;
-  		&:hover {
-  			color: slategray;
-  		}
-	} 
-}
+
 
 
 
