--- a/app/assets/stylesheets/components/general.scss
+++ b/app/assets/stylesheets/components/general.scss
@@ -1,3 +1,5 @@
+@import "base/mixins";
+
 .gen_inline {
   display: inline-block;
   vertical-align: middle;
@@ -26,5 +28,52 @@
     background-image: image-url('minimize.png');
     background-repeat:no-repeat;
     background-position: center;
+  }
+}
+
+
+footer.fb {
+  margin: 40px auto 80px auto;
+  text-align: center;
+
+  p {
+    font-size: 1.6em;
+    font-weight: 700;
+    font-color: #2A2A2A;
+  }
+  a.place-order {
+    color: #a10;
+    margin-bottom: 40px;
+    text-decoration: none;
+    display: block;
+    &:hover {
+      color: slategray;
+    }
+  } 
+}
+
+footer.tell-me-more {
+  margin: 20px auto;
+  text-align: center;
+  a {
+    @include box-shadow(0, -3px, 0, #333);
+    padding: 10px 25px 10px 25px;
+    text-decoration: none;
+    border-radius: 4px;
+    position: relative;
+    top: 0;
+    background-color: #777;
+    color: white;
+
+    &:hover {
+      background-color: #666;
+      color: white;
+    }
+
+    &:active {
+      top: -2px;
+      @include box-shadow(0, -1px, 0, #222);
+      background-color: #555;
+    }
   }
 }
