--- a/app/views/layouts/application0.html.erb
+++ b/app/views/layouts/application0.html.erb
@@ -1,219 +1,43 @@
 <!DOCTYPE html>
 <html>
 <head>
-<%= favicon_link_tag 'logo.ico' %>
   <title>Shnack</title>
-
-
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  <link rel="shortcut icon" type="image/ico" href="/images/favicon.ico">
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
-
-
-   	<script> 
-	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-	  ga('create', 'UA-52696113-1', 'auto');
-	  ga('require', 'displayfeatures');
-
-	  ga('send', 'pageview');
-	</script>
-
 </head>
 
-
-<body onload="checkDevice();">
-
-	<div class="container">
-		<div id="topbar" class="topbar clear-fix">
-			<a href="/"><h1 class="new gen_inline shnack">Shnack</h1></a>
-
-			<% if user_signed_in? %>
-				<ul id="click_me" class="user-settings">
-					<li>
-						<a href="#" class="opac-fix"><%= image_tag("gear.png", alt: "settings", style: "opacity:0.4;") %></a>
-						<ul>
-							<% if current_user.is_manager?  %>
-								<li><%= link_to "Manage Your Vendors", :controller => "/shnack", :action => "manage_vendors" %></li>
-							<%end%>
-							<li><%= link_to "Change your password", edit_user_registration_path %></li>
-							<li><%= link_to('Logout', destroy_user_session_path, :method => :delete) %></li>
-						</ul>
-					</li>
-				</ul>
-			<%else%>
-				<div class="user-settings">
-					<%= link_to('Login', new_user_session_path, :class => 'user')  %> 
-					<%= link_to('Sign Up', new_user_session_path, :class => 'user')  %>  
-				</div> 
-			<%end%>
-
-			<div class="prgs-bar center">
-				<% if current_page?(controller: 'application', action: 'select_stadium') %>
-	  			<div class="step current">
-	  		<% else %>
-	  			<div class="step">
-	  		<%end%>
-	  				Venue
-	      		<div class="circle"></div>
-	  			</div>
-
-
-  			<% if current_page?(controller: 'orders', action: 'new') %>
-	  			<div class="step current">
-	  		<% else %>
-	  			<div class="step">
-	  		<%end%>
-	  				Menu
-	      		<div class="circle"></div>
-	  			</div>
-				
-				<% if current_page?(controller: 'charges', action: 'new') %>
-	  			<div class="step current">
-	  		<% else %>
-	  			<div class="step">
-	  		<%end%>
-	  				Pay
-	      		<div class="circle"></div>
-	  		</div>
+<body>
+	<div id="main-content">
+		<div id="side-bar">
+			<div id="nav"> 
+			  <%= image_tag "shnack_with_text.png", :class => "logo"  %>
+			  <ul id="nav">
+			  <% if user_signed_in? %>
+				<li>
+				  <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>   
+				<li>   
+				  <%= link_to "Change your password", edit_user_registration_path %>
+				</li>
+			  <% else %>
+				<li>
+				<%= link_to('Login', new_user_session_path)  %>  
+				</li>
+			  <% end %>
+			  </ul>
 			</div>
-
-
-		</div> <!--ENDS TOPBAR-->
-
-		<% if flash[:notice] %>
-			<div class="notice"><%= flash[:notice] %></div>
-		<% end %>
-		<% if flash[:error] %>
-			<div class="flash-error"> <%= flash[:error] %> </div>
-		<% end %>
-			
-
-		<div id="order-form" class="the-menu">
-
-	    <div class="row-new">
-	      <div class="panel-heading"><h3>FOODOOD</h3></div>
-	    </div>
-
-	    <div class="row-new">
-	      <div class="item-name col-3">Cheese Pizza</div>
-	      <div class="item-price col-2">$00.00</div>
-	      <div class="cart-add col-1">+</div>
-	      <div class="cart-total col-1">0</div>
-	      <div class="cart-minus col-1">-</div>
-	    	<div class="item-desc col-4">This is a simple discription of a CP, do you know what this is.</div>
-	    </div>
- 		</div>
-
-
-			<%= yield %>
 		</div>
-				
+
+	<p class="notice"><%= notice %></p>
+	<p class="alert"><%= alert %></p>
+
+
+	<div id="order-form">
+		<%= yield %>
 	</div>
 
-	<div class="level">
-		<div class="container my-container caje-info">
-			<span class="shnack">Shnack</span> is now being used at <soan class="caje">Caje</soan><br />
-			<strong>Order ahead. Skip the line.</strong>
-			<br/>
-				<span style="color:#333; font-weight:900;"> Every order enters you for the chance to win a new Logitech Speaker System! </span>
-		</div>
-	</div>
-
-	<div id="level-2">
-		<div class="row">
-			<div class="col-4 step-style">
-				<h1 class="step-style">Order</h1>
-				<%= image_tag("step1.png", :class => "step-style")   %>
-				<p class="step-style">From your seat, view the menus of vendors. Pay and place your order.</p>
-			</div>
-	
-			<div class="col-4 step-style">
-				<h1 class="step-style">Relax</h1>
-				<%= image_tag("camera.png", :class => "step-style")   %>
-				<p class="step-style">Sit back, relax, and enjoy the experience.</p>
-			</div>
-
-			<div class="col-4 step-style">
-				<h1 class="step-style">PickUp</h1>
-				<%= image_tag("step3.png", :class => "step-style")   %>
-				<p class="step-style">When your order is ready, a notification will be sent. Pick up and enjoy.</p>
-			</div>
-		</div>
-	</div>
-
-		<div id="level-3">
-			<div class="container my-container">
-				<div id="info-tagline">Never miss a moment, never miss a meal</div>
-		
-
-
-				<div class="row">
-					<ul class="info-links">
-						<li id="about-links1" class="info-links col-4"><a onClick="forFans()">For Fans</a></li>
-						<li id="about-links2" class="info-links col-4"><a onClick="forVendors()">For Vendors</a></li>
-						<li id="about-links3" class="info-links col-4"><a onClick="contactUs()">Contact Us</a></li>
-					</ul>
-				</div>
-
-
- 			
-				<div class="row">
-					<div class="col-sm-8">
-						<div id="info-text">Shnack is a mobile application designed for concessions at large and small scale events, that lets customers order and pay for a vendor's food via their phone. Shnack eliminates the time customers are spending standing in lines by providing a quick and elegant way to purchase food from your seat. Customers will order food from their phone and will be notified when their food is ready to be picked up. By eliminating the need to wait in line, we can increase customer satisfaction, increase vendor revenue, and ultimately help provide a superior experience to customers.
-						</div>
-
-						<div id="contact-us" class="row">
-							<%= render 'contact_us_mailer/contact_us_mailer' %>
-							<!-- <form name="htmlform" id="contact-us-form" method="post" action="#">
-								<input type="text" name="email" id="email" class="col-md-6" placeholder="Email Address" autocomplete="on" />
-								<input type="text" name="name" id="name"  class="col-md-6" placeholder="Your name">
-								<div class="row">
-									<textarea name="comments"  class="col-md-12" placeholder="What would you like to say" rows="4"></textarea>
-								</div>
-								<input type="submit" class="buttn" value="Submit">
-							</form> -->
-						</div>
-
-
-					</div>
-
-					<%= image_tag "phone_welcome.png", :class => "col-sm-4", :id => "phone" %>
-					
-
-				</div>
-			</div>
-		</div>
-		<!-- END LEVEL-3 -->
-
-		<div id="return-to-top"><a href="#top">Return to top  |  Place an order</a></div>
-
-
-		<div id="footer">
-			<div class="row">
-
-
-				<div class="col-sm-6 center">
-		      <div id="fb-root"></div>
-		      </br></br>
-		     	<p style="font-size:1.3em;">Follow us on Facebook.</br>You might see us at a game.</p>
-		      </br>
-		      <div class="fb-like" data-href="https://www.facebook.com/shnackapp" data-width="100" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
-	      </div>
-
-	      <div class="col-sm-6 center">
-	      	<%= image_tag("GEM.png", size: "300x190", alt: "Goleta Entrepreneurial Magnet") %>
-	      </div>
-	    </div>
-	  </div> <!-- END FOOTER -->
-
-
+	</div> <!-- ends main-content -->
 </body>
 
 </html>
