--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -30,6 +30,7 @@
         <% current_user.cards.each_with_index do |card, index| %>
         <div class="chopped box">
             <%= radio_button_tag(:user_card, index) %> 
+            <label></label>
             <label><%= card.last4 + " " + card.brand %></label>
         </div>
         <br />
@@ -37,6 +38,7 @@
         <% end %>
         <div class ="chopped box">
             <%= radio_button_tag(:user_card, "new", false, :class => "new-card-button") %>
+            <label></label>
             <label> Add a new card </label>
         </div>
 
