--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -396,6 +396,7 @@ table.item-list {
   z-index: index($elements, topbar);
   left: 0;
   right: 0;
+  top:0;
   max-width: 880px;
   margin: 0px auto 40px auto;
   padding: 0px 30px;
