--- a/app/assets/stylesheets/components/general.scss
+++ b/app/assets/stylesheets/components/general.scss
@@ -11,6 +11,10 @@
   max-width: 660px;
   padding-top:15px;
   padding-bottom:15px;
+
+  @media (max-width: 600px) {
+    padding-top:30px;
+  }
 }
 
 .panel-title {
