--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,7 @@
 			<%else%>
 				<div class="user-settings">
 					<%= link_to('Login', new_user_session_path, :class => 'user')  %> 
-					<%= link_to('Sign Up', new_user_session_path, :class => 'user')  %>  
+					<%= link_to('Sign Up', new_user_registration_path, :class => 'user')  %>  
 				</div> 
 			<%end%>
 
