--- a/app/assets/stylesheets/components/general.scss
+++ b/app/assets/stylesheets/components/general.scss
@@ -6,9 +6,14 @@
 }
 
 #order-form {
-  margin: 50px auto;
+  margin: 0px auto;
   min-width: 320px;
   max-width: 660px;
+}
+
+.the-menu {
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .panel-title {
