--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -22,6 +22,14 @@ $elements: base, phone, menu, topbar, user-settings;
 
 
 
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
 
 p {
 	font-family: "Poiret One", Geneva, sans-serif;
@@ -74,7 +82,7 @@ p {
   margin: 0px auto;
   background: $black;
   padding: 45px 10px;
-  min-height: 560px;
+  min-height: 480px;
 }
 
 #footer {
@@ -138,7 +146,7 @@ img.step-style {
 
 #phone{
 position: absolute;
-bottom: -120px;
+top: 20px;
 z-index: index($elements, phone);
 width: 230px;
 }
